ajout jwt et bcrypt
